test/spec/labels.txt
;;; ERROR: 1
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/labels.wast
(;; STDERR ;;;
third_party/testsuite/labels.wast:90:16: syntax error, unexpected (, expecting INT or VAR

;;; STDERR ;;)
